Vertically center everything

--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    min-height: 100vh;
     margin: 0;
     background: radial-gradient(circle, var(--dark-blue), var(--light-blue));
     color: var(--white);
@@ -63,7 +62,7 @@ img {
     max-width: 100%;
     height: auto;
     margin-top: -0.75rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     transform: translateX(-1rem);
 }
 
@@ -86,6 +85,10 @@ p {
 .container {
     padding: 3rem 1.5rem;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 
 .col {
