--- a/style.css
+++ b/style.css
@@ -110,6 +110,14 @@ p {
     padding: 0.625rem;
     border-radius: 3rem;
     width: 240px;
+    transform: translate3d(0, 0.125rem, 0);
+    transition: transform 0.15s, box-shadow 0.15s;
+}
+
+.btn:hover,
+.btn:focus {
+    transform: translate3d(0, 0, 0);
+    box-shadow: 0 0.5rem 1rem -0.5rem rgba(0, 0, 0, 0.5);
 }
 
 .font-thin {
