--- a/style.css
+++ b/style.css
@@ -127,3 +127,30 @@ p {
 .font-bold {
     font-weight: 700;
 }
+
+@media (min-width: 768px) {
+    h1 {
+        font-size: 4rem;
+        margin-bottom: 1rem;
+    }
+
+    img {
+        max-width: 560px;
+        margin-bottom: 2rem;
+    }
+
+    p {
+        font-size: 1.125rem;
+        margin-bottom: 3rem;
+    }
+
+    .col {
+        max-width: 560px;
+    }
+
+    .btn {
+        font-size: 1.25rem;
+        padding: 0.625rem;
+        width: 320px;
+    }
+}
